# data-analyst-agent

./: .gitignore  Algerian_forest_fires_cleaned_dataset.csv  FRONTEND_BACKEND_INTEGRATION.md  config_test.py  deleted_data.csv  dummy.py  index.html  log.py  main.py  package-lock.json  package.json  requirements.txt  vite.config.mts
Configuration/: config.py
agents/: Agent.py  agent_utils.py  analyser_agent.py  cleaner_agent.py  visualizer_agent.py
agents/tests/: analyser_agent_test.py  visualizer_agent_test.py
api/: router.py
backend/: config_test.py  pyproject.toml
backend/Configuration/: config.py
backend/agents/: agent_utils.py  analyser_agent.py  claude_agent.py  cleaner_agent.py  gemini_agent.py  openai_agent.py  visualizer_agent.py
backend/agents/tests/: cleaner_agent_test.py
backend/db/: deleted_data_handler.py  log.py  migrate_add_tool_columns.py  revert.py  test.py  version_example.py
backend/prompts/: prompts.py
backend/tools/: analyser_tools.py  cleaner_tools.py  tool_main.py  visualizer_tools.py
backend/workflow/: analyser_workflow.py  cleaner_workflow.py  main_workflow.py  state_management.py  visualizer_workflow.py
bricks/: __init__.py  warehouse.py
data_versions/: version_20251219_174445_068125.csv
db/: log.py
frontend/: package-lock.json
prompts/: prompts.py
src/: main.jsx  styles.css
static/: index.html  package-lock.json  package.json  script.js  style.css
tools/: analyser_tools.py  cleaner_tools.py  visualizer_tools.py
workflow/: analyser_workflow.py  cleaner_workflow.py  main_workflow.py  visualizer_workflow.py
(+26 files in other folders)
